--- a/frontened/index.html
+++ b/frontened/index.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html>
+ <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -19,17 +19,17 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
- -->
+ 
 
- <!doctype html>
+<!--  <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Vite + React</title> 
 
-    <!-- ✅ Corrected Highlight.js CDN -->
+    
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/nord.min.css"
@@ -44,4 +44,4 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-</html>
+</html> -->
